# InfraNova-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_inference.py  benchmark.py  dataset_statistics.py  docker-compose.yml  download_landsat9.py  evaluate.py  export_model.py  export_onnx.py  extract_multispectral.py  final_cleanup.py  generate_model_card.py  make_test_image.py  model_summary.py  organize_files.py  process_landsat_patches.py  pyproject.toml  requirements.txt  split_patches.py  validate_dataset.py  visualize_dataset.py
configs/: config.yaml
demo/: inference.py  requirements.txt  streamlit_app.py  utils.py
docs/: architecture.md  demo_strategy.md  inference_optimization.md  methodology.md  roadmap.md  training_strategy.md
logs/: training.csv
notebooks/: MAIN.ipynb  eda.ipynb
src/datasets/: __init__.py  landsat9_dataset.py  sentinel2_dataset.py  sentinel2_multispectral_dataset.py  transforms.py
src/inference/: landsat_inference.py
src/models/pix2pix/: discriminator.py  generator.py  pix2pix.py
src/training/: callbacks.py  losses.py  scheduler.py  train_landsat.py  trainer.py  training_landsat.py
src/utils/: checkpoint.py  config_validator.py  image_processing.py  logger.py  seed.py
tests/: conftest.py  test_checkpoint.py  test_core_behaviour.py  test_dataset.py  test_inference.py  test_losses.py  test_preprocessing.py
